[package]
name = "lix-dds"
version = "0.1.0"
authors = ["Michael <311155@qq.com>"]
description = "OMG DDS implement"
repository = "https://gitee.com/lixai/lix-dds"
homepage = "https://gitee.com/lixai/lix-dds"
readme = "README.md"
keywords = ["protocol", "DDS"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.2"
speedy = "0.7.1"
bitmaps = "3.1.0"
bitintr = "0.3.0"
log = "0.4.0"
env_logger = "0.9.1"
substring="1.4.5"
lazy_static = "1.4.0"
regex = "1.6.0"
trust-dns-resolver = "*"